--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-pug": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-slim": "^0.1.0"
   },
   "dependencies": {
     "pug": "^2.0.0-beta6"
